# neural-mmo

./: .gitattributes  .gitignore  .gitmodules  Acolyte.py  Forge.py  Forge.sh  LICENSE  MANIFEST.in  README.md  README.rst  RLLib.py  baseline.py  client  client.sh  combatFormulas.py  configs.py  doc_resource  example_batcher.py  example_spaces.py  experiments.py  index.html  ma_repro.py  mock_actions.py  offline_dataset.py  perf.py  pettingzoo_test.py  pyproject.toml  quickplot.py  ray_pending.py  raytest.py  release.txt  resource  save_atns.py  setup.cfg  setup.py  speed.py  test.sh  test_async.py  test_multiaction.py  test_queue.py  (+5 more)
docs/: index.html  make.sh  modules.rst  postprocess.py  requirements.txt  stub.txt  view.sh
experiment/: path.txt
forge/: embyr
jsuarez/: Baselines.py  BatchSnippets.py  CPUUtils.py  Color256.py  ColorEnts.py  Handler.py  MapMaker.py  NPCHandler.py  PCHandler.py  SkillActions.py  ascend.py  reset.sh  timed.py  trinity.py
large-baseline-new/: checkpoint-600.tune_metadata  checkpoint.tune_metadata  training.npy
neural_mmo/: Forge.py  __init__.py  _version.py  resource
nmmo/: __init__.py  _version.py  emulation.py  infrastructure.py  integrations.py  overlay.py  scripting.py  version.py  websocket.py
projekt/: __init__.py  ann.py  combatFormulas.py  config.py  countconfig.py  env.py  evaluator.py  god.py  overlay.py  pantheon.py  policy.py  realm.py  rl_old_wrapp.py  rllib_wrapper.py  rlutils.py  sword.py  timed.py  visualize.py
requirements/: base.txt  dev.txt  rllib.txt
scripts/: experiments.py  figures.py  forge  hosts.txt  (+12 more)
(+1102 files in other folders)
