[tool.poetry]
name = "nmmo"
version = "1.4"
description = "A massively multiagent environment for artificial intelligence research"
authors = ["Joseph Suarez"]
license = "MIT License"

[tool.poetry.dependencies]
python = "3.8.*"
cloudpickle = "1.2.2"
setproctitle = "1.1.10"
service_identity = "18.1.0"
redis = "3.4.0"
opensimplex = "0.2"
PyTMX = "3.21.7"
autobahn = "19.3.3"
Twisted = "19.2.0"
torch = "1.5.0"
matplotlib = "3.1.3"
bokeh = "1.3.4"
numpy = "^1.19.0"
gym = "^0.17.2"
imageio = "^2.8.0"
fire = "^0.3.1"
pandas = "^1.0.5"
tabulate = "^0.8.7"
opencv-python = "^4.2.0"
dm-tree = "^0.1.5"
lz4 = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
